# PREACT

./: .gitignore  LICENSE  README.md  building_map.md  pyproject.toml
docs/: project_gap_analysis.md  ux_architecture.md
fastapi/: __init__.py  testclient.py
notebooks/: data_source_sanity_checks.ipynb
preact/: __init__.py  config.py
preact/agents/: __init__.py  adaptive.py
preact/analytics/: __init__.py  gdelt_graphs.py
preact/backend/: __init__.py  _fastapi_stub.py  _pydantic_stub.py  app.py
preact/dashboard/: __init__.py  app.py  gdelt_module.py  layout.py  sample_data.py
preact/data_ingestion/: __init__.py  orchestrator.py  sources.py
preact/data_ingestion/sources/: __init__.py  acled.py  base.py  (+5 more)
preact/evaluation/: __init__.py  metrics.py
preact/feature_store/: __init__.py  builder.py
preact/models/: __init__.py  bayesian.py  neural.py  predictor.py
preact/pipeline/: __init__.py  distributed.py  mvp.py
preact/scenarios/: __init__.py  counterfactual.py
preact/simulation/: __init__.py  economy.py  economy_core.py  engine.py  events.py  policy.py  policy_core.py  reporting.py  results.py  scenario.py  scenario_builder.py  sentiment.py  sentiment_core.py  service.py  simulation_engine.py  simulation_results.py  storage.py  templates.py
preact/utils/: __init__.py  io.py
scripts/: update_pipeline.py
tests/: test_agents.py  test_backend.py  test_bayesian.py  test_feature_store.py  test_gdelt.py  test_gdelt_graphs.py  test_model_persistence.py  test_neural.py  test_pipeline_distributed.py  test_simulation.py  test_simulation_storage.py
(+1 files in other folders)
