[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "preact"
version = "0.1.0"
description = "Predictive Early-warning for Coups and Atrocities"
authors = [{name = "PREACT Team", email = "info@example.org"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.1",
    "requests>=2.28",
    "duckdb>=0.8",
    "pyarrow>=9.0",
    "matplotlib>=3.6",
    "scipy>=1.9",
    "pgmpy>=0.1.20",
    "pymc>=5.0",
    "shap>=0.42",
    "streamlit>=1.28",
    "fastapi>=0.110",
    "uvicorn>=0.24"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["preact*"]
